# drip

./: CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  README.md  dist-workspace.toml  manifest
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/skills/drip/: SKILL.md
.github/workflows/: release.yml
migrations/: 0001_init.sql  0002_profiles.sql  0003_source_labels.sql  0004_topics.sql  0005_source_topic.sql
src/: cli.rs  config.rs  credentials.rs  cron.rs  db.rs  dedup.rs  digest.rs  fetch_runs.rs  item.rs  journal.rs  main.rs  profiles.rs  reddit.rs  reddit_feed.rs  rss.rs  settings.rs  sources.rs  topics.rs  types.rs  update.rs  youtube.rs
