[package]
name = "drip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
feed-rs = "2.4.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
mockito = "1"
tempfile = "3"
