[package]
name = "drip"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/beingfrankly/drip"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
feed-rs = "2.4.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[dev-dependencies]
mockito = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
